[package]
name = "xd-tts"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
derive = "1.0.0"
deunicode = "1.3.2"
features = "0.10.0"
griffin-lim = { git = "http://github.com/emotechlab/griffin-lim.git" }
hound = "3.5.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1" # Just for convenient moving to/from python for checking
num2words = "1.0.1"
once_cell = "1.15.0"
regex = "1.6.0"
serde =  { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
ssml-parser = "0.1.4" 
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
rten-tensor = { version = "0.7.0" }
rten = { version = "0.7.0", features = ["random"] }
